2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2009-01-19  Elchonon Edelson  <eee@users.sourceforge.net>

	* aes.man: Minor enhancement.

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-06-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.pcx: New file. Syntax definitions for the public commands of
	  the aes package.

2008-05-13  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Version bump missed the index :(

2008-05-12  Andreas Kupries  <andreask@activestate.com>

	* aes.tcl (DecryptBlock, EncryptBlock): Added code limiting the
	* aes.man: values to int32 range, to prevent going out of range
	* aes.test: when run by Tcl 8.5 and its bignums. Extended
	* pkgIndex.tcl: testsuite to catch a problematic case which fails
	  without the change. Bumped version to 1.0.1.

	* aes.tcl (::aes::Pop, ::aes::aes): Also, cleaned up upvar command
	  without explicit level information.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.man: Fixed all warnings due to use of now deprecated
	  commands. Added a section about how to give feedback.

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* aes.test: Hooked into the new common test support code.
