@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin aes n 1.0.1]
+[manpage_begin aes n 1.0.2]
 [copyright {2005, Pat Thoyts <patthoyts@users.sourceforge.net>}]
 [moddesc {Advanced Encryption Standard (AES)}]
 [titledesc {Implementation of the AES block cipher}]
 [category  {Hashes, checksums, and encryption}]
 [require Tcl 8.2]
-[require aes [opt 1.0.1]]
+[require aes [opt 1.0.2]]
 [description]
 [para]
 
