@@ -1,3 +1,10 @@
+2010-07-06  Andreas Kupries  <andreask@activestate.com>
+
+	* aes.tcl (DecryptBlock, EncryptBlock): [Bug 2993029]: More code
+	* aes.man: limiting the values to int32 range. Extended the
+	* aes.test: testsuite. Bumped version to 1.0.2. See also the
+	* pkgIndex.tcl: changelog entry of 2008-05-12.
+
 2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	*
